@@ -83,6 +83,8 @@ int8_t check_rmcpplus_rakp_message_2_key_exchange_authentication_code(int8_t aut
 
 int8_t check_rmcpplus_rakp_message_4_integrity_check_value(int8_t authentication_algorithm, u_int8_t *sik_key, u_int32_t sik_key_len, u_int8_t *remote_console_random_number, u_int32_t remote_console_random_number_len, u_int32_t managed_system_session_id, u_int8_t *managed_system_guid, u_int32_t managed_system_guid_len, u_int8_t *integrity_check_value, u_int32_t integrity_check_value_len);
 
+  int8_t check_rmcpplus_session_trlr(int8_t integrity_algorithm, u_int8_t *pkt, u_int32_t pkt_len, u_int8_t *integrity_key, u_int32_t integrity_key_len, u_int8_t *auth_code_data, u_int32_t auth_code_data_len);
+
 #ifdef __cplusplus
 }
 #endif
